--- a/PupBuddy CA2 OanaSorin/Views/Shared/_Layout.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("ListPuppies", "ListPuppies", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "OwnerModels", "Home")</li>
+                    <li>@Html.ActionLink("Puppies", "PuppyModels", "Home")</li>
                 </ul>
             </div>
         </div>
