route to puppy & meeting controllers fixed

--- a/PupBuddy CA2 OanaSorin/Views/PuppyModels/Index.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/PuppyModels/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PupBuddy_CA2_OanaSorin.Models.PuppyModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Puppies";
 }
 
 <h2>Index</h2>
