--- a/PupBuddy CA2 OanaSorin/Views/PuppyModels/Create.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/PuppyModels/Create.cshtml
@@ -14,14 +14,14 @@
     <div class="form-horizontal">
         <h4>PuppyModel</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+@*        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.OwnerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OwnerID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.OwnerID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Breed, htmlAttributes: new { @class = "control-label col-md-2" })
