--- a/PupBuddy CA2 OanaSorin/Views/PuppyModels/Edit.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/PuppyModels/Edit.cshtml
@@ -17,13 +17,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.PuppyID)
 
-        <div class="form-group">
+       @* <div class="form-group">
             @Html.LabelFor(model => model.OwnerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OwnerID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.OwnerID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Breed, htmlAttributes: new { @class = "control-label col-md-2" })
