Home page styled

--- a/PupBuddy CA2 OanaSorin/Views/Home/Index.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Home/Index.cshtml
@@ -3,29 +3,58 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1 class="text-center">More fun walking together </h1>
+    <hr>
     <p class="lead">PupBuddy is a free and open platform where our faithful companions can meet up and play with likeminded pups.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+    <img class=" img-fluid mx-auto py-4" src="~/images/pawtrail.png">
+    <p><a href="#" class="btn btn-outline-success btn-lg">Find your walk buddy &raquo;</a></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<div class="bg-white p-4">
+    <div class="text-center" style="
+    background-image: url(/images/pets.png);
+    height: 120px;background-repeat: no-repeat;
+    background-position: center;background-size: cover;">
+</div>
+
+    <div class="row mt-5">
+        <div class="col-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3 class="card-title">"Rescue is my favorite breed" <hr /></h3>
+                    <h5 class="text-right"> ~ Wise Dog</h5>
+                    <p class="card-text">
+                        The biggest reason to adopt instead of buying a dog is there are just so many dogs waiting to be adopted. <br />Every dog bought from a store means another dog that will never find a home.
+                    </p>
+                    <a href="https://www.dspca.ie/adopt-a-pet/" class="btn btn-outline-success">Rescue Me</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3 class="card-title">Our Partners <hr /> </h3>
+                    <h5 class="text-right">  ~ El Dog Grooming</h5>
+                    <p class="card-text">
+                        A full-service pet spa. <br />
+                        A groomed puppy is a happy puppy.<br />
+                        Always a gentle and loving touch.<br />  EL Dog Grooming offer 20% OFF for their services, just quote "PupBuddy" when booking.
+                    </p>
+                    <a href="#" class="btn btn-outline-success">EL Dog Grooming</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3 class="card-title"> Tips on Dog Exercise <hr /> </h3>
+                    <p class="card-text">
+                        Taking your dog for a walk around the block is a great start, and it might be enough for breeds with lower exercise requirements. Even couch potatoes appreciate variety every once in a while, however, and there are countless opportunities to exercise your dog in your daily life.
+                    </p>
+                    <a href="#" class="btn btn-outline-success">Go somewhere</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
