--- a/PupBuddy CA2 OanaSorin/Views/Shared/_Layout.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Shared/_Layout.cshtml
@@ -11,15 +11,15 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-            @Html.ActionLink("Pup Buddy", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link active" })</li>
-                    <li class="nav-item">@Html.ActionLink("Puppy", "Index", "PuppyModels", null, new { @class = "nav-link" })</li>
+@*                    <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link active" })</li>
+*@                    <li class="nav-item">@Html.ActionLink("Puppy", "Index", "PuppyModels", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Meetings", "Index", "Meeting", null,  new { @class = "nav-link" })</li>
                 </ul>
             </div>
