--- a/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewBag.Title = "Create";
+    List<SelectListItem> puppies = new List<SelectListItem>();
+    puppies.Add(new SelectListItem() { Text = "Puppy 1", Value = "Mark" });
+    puppies.Add(new SelectListItem() { Text = "Puppy 2", Value = "Joe" });
 }
 
 <h2>Create</h2>
@@ -11,11 +14,11 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>MeetingModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+<div class="form-horizontal">
+    <h4>MeetingModel</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
             @Html.LabelFor(model => model.MeetingID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MeetingID, new { htmlAttributes = new { @class = "form-control" } })
@@ -23,7 +26,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+    <div class="form-group">
             @Html.LabelFor(model => model.OrganiserPuppyID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OrganiserPuppyID, new { htmlAttributes = new { @class = "form-control" } })
@@ -31,7 +34,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+    <div class="form-group">
             @Html.LabelFor(model => model.AttendeePuppyID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AttendeePuppyID, new { htmlAttributes = new { @class = "form-control" } })
@@ -39,7 +42,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+    <div class="form-group">
             @Html.LabelFor(model => model.PuppyID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PuppyID, new { htmlAttributes = new { @class = "form-control" } })
@@ -47,7 +50,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+    <div class="form-group">
             @Html.LabelFor(model => model.OwnerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OwnerID, new { htmlAttributes = new { @class = "form-control" } })
@@ -55,28 +58,37 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.OutForWalk, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OutForWalk, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OutForWalk, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="form-group">
+        
+        <div class="col-md-10">
+            Which puppy do you want to meet
+            @Html.DropDownListFor(model => model.PuppyID, new SelectList(Model.PuppyCollection, "PuppyID", "PupName"), "Select")
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.OutForWalk, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.OutForWalk, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.OutForWalk, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Location, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
