fixed Meeting Views for counterparty pupper dropdown

--- a/PupBuddy CA2 OanaSorin/Views/Meeting/Index.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Meeting/Index.cshtml
@@ -36,6 +36,7 @@
     <tr>
         
         <td>
+            Pupper
            @* @Html.DisplayFor(model => model.PuppyID, new { id = item.PuppyID })*@
         </td>
 
