--- a/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
@@ -68,8 +68,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.OutForWalk, htmlAttributes: new { @class = "control-label col-md-2" })
+         @*@Html.LabelFor(model => model.OutForWalk , htmlAttributes: new { @class = "control-label col-md-2" })*@
         <div class="col-md-10">
+            Pick a date and time
             @Html.EditorFor(model => model.OutForWalk, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.OutForWalk, "", new { @class = "text-danger" })
         </div>
