--- a/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
+++ b/PupBuddy CA2 OanaSorin/Views/Meeting/Create.cshtml
@@ -17,16 +17,16 @@
 <div class="form-horizontal">
     <h4>MeetingModel</h4>
     <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
             @Html.LabelFor(model => model.MeetingID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MeetingID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MeetingID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-    <div class="form-group">
+@*    <div class="form-group">
             @Html.LabelFor(model => model.OrganiserPuppyID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OrganiserPuppyID, new { htmlAttributes = new { @class = "form-control" } })
@@ -56,7 +56,7 @@
                 @Html.EditorFor(model => model.OwnerID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.OwnerID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
     <div class="form-group">
         
@@ -86,7 +86,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-outline-success" />
         </div>
     </div>
 </div>
